--- a/css/type.css
+++ b/css/type.css
@@ -1,6 +1,6 @@
 /*
   Typografier || Code released under the UNLICENSE
-  https://typografier.web-dev.tools/#0,100,1.3,1.067,0;38,110,1.4,1.125,1;60,120,1.5,1.125,1;90,130,1.5,1.125,1
+  https://typografier.web-dev.tools/#0,100,1.3,1.067,0;38,110,1.4,1.125,1;60,120,1.5,1.200,1;90,130,1.5,1.250,1
 */
 
 html {
@@ -983,63 +983,63 @@ legend {
   }
 
   .tenamega {
-    font-size: 3.6532rem;
-    line-height: 4.875rem;
+    font-size: 7.4301rem;
+    line-height: 9.75rem;
   }
 
   .tenakilo {
-    font-size: 3.2473rem;
-    line-height: 4.5rem;
+    font-size: 6.1917rem;
+    line-height: 8.25rem;
   }
 
   .tena {
-    font-size: 2.8865rem;
-    line-height: 4.125rem;
+    font-size: 5.1598rem;
+    line-height: 6.75rem;
   }
 
   .nina {
-    font-size: 2.5658rem;
-    line-height: 3.375rem;
+    font-size: 4.2998rem;
+    line-height: 5.625rem;
   }
 
   .yotta {
-    font-size: 2.2807rem;
-    line-height: 3rem;
+    font-size: 3.5832rem;
+    line-height: 4.875rem;
   }
 
   .zetta {
-    font-size: 2.0273rem;
-    line-height: 3rem;
+    font-size: 2.986rem;
+    line-height: 4.125rem;
   }
 
   h1,
   .exa {
-    font-size: 1.802rem;
-    line-height: 2.625rem;
+    font-size: 2.4883rem;
+    line-height: 3.375rem;
   }
 
   h2,
   .peta {
-    font-size: 1.6018rem;
-    line-height: 2.25rem;
+    font-size: 2.0736rem;
+    line-height: 3rem;
   }
 
   h3,
   .tera {
-    font-size: 1.4238rem;
-    line-height: 1.875rem;
+    font-size: 1.728rem;
+    line-height: 2.25rem;
   }
 
   h4,
   .giga {
-    font-size: 1.2656rem;
+    font-size: 1.44rem;
     line-height: 1.875rem;
   }
 
   h5,
   .mega {
-    font-size: 1.125rem;
-    line-height: 1.5rem;
+    font-size: 1.2rem;
+    line-height: 1.875rem;
   }
 
   h6,
@@ -1052,23 +1052,23 @@ legend {
 
   small,
   .milli {
-    font-size: .8889rem;
+    font-size: .8333rem;
     line-height: 1.5rem;
   }
 
   .micro {
-    font-size: .7901rem;
-    line-height: 1.5rem;
+    font-size: .6944rem;
+    line-height: 1.125rem;
   }
 
   .nano {
-    font-size: .7023rem;
-    line-height: 1.125rem;
+    font-size: .5787rem;
+    line-height: .75rem;
   }
 
   .pico {
-    font-size: .6243rem;
-    line-height: 1.125rem;
+    font-size: .4823rem;
+    line-height: .75rem;
   }
 
   ul,
@@ -1400,63 +1400,63 @@ legend {
   }
 
   .tenamega {
-    font-size: 3.6532rem;
-    line-height: 4.875rem;
+    font-size: 11.6415rem;
+    line-height: 15.375rem;
   }
 
   .tenakilo {
-    font-size: 3.2473rem;
-    line-height: 4.5rem;
+    font-size: 9.3132rem;
+    line-height: 12.375rem;
   }
 
   .tena {
-    font-size: 2.8865rem;
-    line-height: 4.125rem;
+    font-size: 7.4506rem;
+    line-height: 9.75rem;
   }
 
   .nina {
-    font-size: 2.5658rem;
-    line-height: 3.375rem;
+    font-size: 5.9605rem;
+    line-height: 7.875rem;
   }
 
   .yotta {
-    font-size: 2.2807rem;
-    line-height: 3rem;
+    font-size: 4.7684rem;
+    line-height: 6.375rem;
   }
 
   .zetta {
-    font-size: 2.0273rem;
-    line-height: 3rem;
+    font-size: 3.8147rem;
+    line-height: 5.25rem;
   }
 
   h1,
   .exa {
-    font-size: 1.802rem;
-    line-height: 2.625rem;
+    font-size: 3.0518rem;
+    line-height: 4.125rem;
   }
 
   h2,
   .peta {
-    font-size: 1.6018rem;
-    line-height: 2.25rem;
+    font-size: 2.4414rem;
+    line-height: 3.375rem;
   }
 
   h3,
   .tera {
-    font-size: 1.4238rem;
-    line-height: 1.875rem;
+    font-size: 1.9531rem;
+    line-height: 2.625rem;
   }
 
   h4,
   .giga {
-    font-size: 1.2656rem;
-    line-height: 1.875rem;
+    font-size: 1.5625rem;
+    line-height: 2.25rem;
   }
 
   h5,
   .mega {
-    font-size: 1.125rem;
-    line-height: 1.5rem;
+    font-size: 1.25rem;
+    line-height: 1.875rem;
   }
 
   h6,
@@ -1469,23 +1469,23 @@ legend {
 
   small,
   .milli {
-    font-size: .8889rem;
+    font-size: .8rem;
     line-height: 1.5rem;
   }
 
   .micro {
-    font-size: .7901rem;
-    line-height: 1.5rem;
+    font-size: .64rem;
+    line-height: 1.125rem;
   }
 
   .nano {
-    font-size: .7023rem;
-    line-height: 1.125rem;
+    font-size: .512rem;
+    line-height: .75rem;
   }
 
   .pico {
-    font-size: .6243rem;
-    line-height: 1.125rem;
+    font-size: .4096rem;
+    line-height: .75rem;
   }
 
   ul,
